hydragrow-shared/tests/snapshots/schema_roundtrip_and_snapshots__crop_recipe_golden.snap
---
source: tests/schema_roundtrip_and_snapshots.rs
expression: sample_crop_recipe()
---
{
  "schema_version": 2,
  "recipe_id": "lettuce-romaine-v1",
  "season_id": "season-2026-08",
  "device_id": "device-001",
  "revision": 7,
  "start_time_sec": 1777000000,
  "current_stage_index": 1,
  "stages": [
    {
      "name": "seedling",
      "duration_sec": 604800,
      "ec_target": 0.8,
      "ec_tolerance": 0.1,
      "ph_target": 6.0,
      "ph_tolerance": 0.2,
      "nutrient_a_ratio": 1.0,
      "nutrient_b_ratio": 1.0,
      "water_level_target": 18.0,
      "misting_on_duration_ms": 10000,
      "misting_off_duration_ms": 180000
    },
    {
      "name": "vegetative",
      "duration_sec": 1209600,
      "ec_target": 1.4,
      "ec_tolerance": 0.15,
      "ph_target": 6.1,
      "ph_tolerance": 0.2,
      "nutrient_a_ratio": 1.0,
      "nutrient_b_ratio": 1.0,
      "water_level_target": 20.0,
      "misting_on_duration_ms": 10000,
      "misting_off_duration_ms": 180000
    }
  ]
}
