hydragrow-shared/tests/snapshots/schema_roundtrip_and_snapshots__mqtt_command_payload_golden.snap
---
source: tests/schema_roundtrip_and_snapshots.rs
assertion_line: 235
expression: command
---
{
  "target": "pump_b",
  "action": "start",
  "params": {
    "pump_id": "pump_b",
    "duration_sec": 12,
    "pwm": 65,
    "state": true
  },
  "ts": 1771000000,
  "nonce": "nonce-golden",
  "signature": "sig-golden"
}
